[gd_scene load_steps=16 format=3 uid="uid://d2m6dxtevb3up"]

[ext_resource type="Script" path="res://gui/inventory/scripts/inventory.gd" id="1_gdg5o"]
[ext_resource type="Texture2D" uid="uid://e11ba5kw30cv" path="res://gui/inventory/assets/ui_book.png" id="2_gu4hg"]
[ext_resource type="AudioStream" uid="uid://vcscfpd15ed8" path="res://resources/assets/sfx/paper_slide.wav" id="2_liu5y"]
[ext_resource type="AudioStream" uid="uid://lw0olgyuq5pa" path="res://resources/assets/sfx/page_turn_single.wav" id="3_gqbhe"]
[ext_resource type="FontFile" uid="uid://brkm5d1yg37hw" path="res://gui/fonts/monogram.ttf" id="3_jic0x"]
[ext_resource type="Texture2D" uid="uid://ipaomlq7vjoq" path="res://gui/icons/objective.png" id="4_jjisr"]
[ext_resource type="AudioStream" uid="uid://fc3mh8itgr0t" path="res://resources/assets/sfx/paper-grab.wav" id="4_tibx7"]
[ext_resource type="Texture2D" uid="uid://m8507emy2o02" path="res://gui/icons/objective_pressed.png" id="5_vxisn"]
[ext_resource type="Texture2D" uid="uid://b3gygthilc4sh" path="res://gui/icons/objective_hover.png" id="6_dda7i"]
[ext_resource type="FontFile" uid="uid://bne18jd4oxf25" path="res://gui/fonts/monogram-extended.ttf" id="7_172y3"]
[ext_resource type="Texture2D" uid="uid://cd5x2y0cy708o" path="res://gui/icons/coin.png" id="7_v5qqb"]
[ext_resource type="Texture2D" uid="uid://cbfs1hetggmn2" path="res://gui/icons/coin_pressed.png" id="8_bi663"]
[ext_resource type="Texture2D" uid="uid://p0bmsfcb6t40" path="res://gui/icons/coin_hover.png" id="9_ggodq"]
[ext_resource type="Texture2D" uid="uid://bbffl3oki18f0" path="res://gui/inventory/assets/ui_book2.png" id="10_4plao"]
[ext_resource type="Texture2D" uid="uid://viasw6xg4ins" path="res://gui/icons/close_icon.png" id="11_3cae7"]

[node name="Inventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gdg5o")
popup_sound = ExtResource("2_liu5y")
popdown_sound = ExtResource("3_gqbhe")
change_tab_sound = ExtResource("4_tibx7")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.752941)

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
tabs_visible = false

[node name="ObjectivesView" type="Control" parent="TabContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/ObjectivesView"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.086
anchor_top = 0.028
anchor_right = 0.914
anchor_bottom = 1.0
offset_left = -0.0200005
offset_top = -0.04
offset_right = 0.019989
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="TabContainer/ObjectivesView/MarginContainer"]
layout_mode = 2
texture = ExtResource("2_gu4hg")
stretch_mode = 5

[node name="TabTitleCenter" type="CenterContainer" parent="TabContainer/ObjectivesView"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.194
anchor_top = 0.167
anchor_right = 0.431
anchor_bottom = 0.221
offset_left = -0.0800018
offset_top = -0.0600014
offset_right = 0.0799866
offset_bottom = 0.219997

[node name="TabTitle" type="Label" parent="TabContainer/ObjectivesView/TabTitleCenter"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_jic0x")
theme_override_font_sizes/font_size = 12
text = "Objetivos"

[node name="ObjectivesContent" type="RichTextLabel" parent="TabContainer/ObjectivesView"]
layout_mode = 0
offset_left = 57.0
offset_top = 46.0
offset_right = 144.0
offset_bottom = 149.0
theme_override_colors/default_color = Color(0, 0, 0, 0.658824)
theme_override_fonts/normal_font = ExtResource("7_172y3")
theme_override_font_sizes/normal_font_size = 8
text = "Notas estranhas:
 - 2/10 notas encontradas.

Buscando por ajuda:
 - 0/3 vizinhos interagidos.

Um velho amigo:
 - Recupere o item perdido de Sr.Batata.
 - Entregue o item perdido.

obs.: O texto de quests acima Ã© apenas um exemplo para teste."

[node name="ItemsView" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/ItemsView"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.086
anchor_top = 0.028
anchor_right = 0.914
anchor_bottom = 1.0
offset_left = -0.0200005
offset_top = -0.04
offset_right = 0.019989
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="TabContainer/ItemsView/MarginContainer"]
layout_mode = 2
texture = ExtResource("10_4plao")
stretch_mode = 5

[node name="TabTitleCenter" type="CenterContainer" parent="TabContainer/ItemsView"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.194
anchor_top = 0.167
anchor_right = 0.431
anchor_bottom = 0.221
offset_left = -0.0800018
offset_top = -0.0600014
offset_right = 0.0799866
offset_bottom = 0.219997

[node name="TabTitle" type="Label" parent="TabContainer/ItemsView/TabTitleCenter"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_jic0x")
theme_override_font_sizes/font_size = 12
text = "Itens"

[node name="Buttons" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ObjectivesButton" type="TextureButton" parent="Buttons"]
layout_mode = 0
offset_left = 267.0
offset_top = 38.0
offset_right = 283.0
offset_bottom = 54.0
texture_normal = ExtResource("4_jjisr")
texture_pressed = ExtResource("5_vxisn")
texture_hover = ExtResource("6_dda7i")
texture_disabled = ExtResource("4_jjisr")
stretch_mode = 3

[node name="ItensButton" type="TextureButton" parent="Buttons"]
layout_mode = 0
offset_left = 267.0
offset_top = 53.0
offset_right = 283.0
offset_bottom = 69.0
texture_normal = ExtResource("7_v5qqb")
texture_pressed = ExtResource("8_bi663")
texture_hover = ExtResource("9_ggodq")
texture_disabled = ExtResource("7_v5qqb")
stretch_mode = 3

[node name="CloseButton" type="TextureButton" parent="Buttons"]
visible = false
layout_mode = 0
offset_left = 240.0
offset_top = 25.0
offset_right = 256.0
offset_bottom = 41.0
texture_normal = ExtResource("11_3cae7")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = 16.0

[connection signal="pressed" from="Buttons/ObjectivesButton" to="." method="_on_objectives_button_pressed"]
[connection signal="pressed" from="Buttons/ItensButton" to="." method="_on_itens_button_pressed"]
[connection signal="pressed" from="Buttons/CloseButton" to="." method="_on_texture_button_pressed"]
